# paper_2020_scalable_algorithms

./: .gitmodules  CMakeLists.txt  README.md
environment/configuration/: conda_environment.yml
model/: wildfire-pcraster.py
output/lue_algorithm_focal_mean_benchmark/cluster_node/strong_scaling/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
output/lue_algorithm_focal_mean_benchmark/cluster_node/weak_scaling/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
output/lue_algorithm_focal_mean_benchmark/numa_node/strong_scaling/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
output/lue_algorithm_focal_mean_benchmark/numa_node/weak_scaling/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
output/lue_algorithm_focal_mean_benchmark/thread_numa_node/strong_scaling/: 1.json  2.json  3.json  4.json  5.json  6.json
output/lue_algorithm_focal_mean_benchmark/thread_numa_node/weak_scaling/: 1.json  2.json  3.json  4.json  5.json  6.json
output/lue_algorithm_sqrt_benchmark/cluster_node/strong_scaling/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
output/lue_algorithm_sqrt_benchmark/cluster_node/weak_scaling/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
output/lue_algorithm_sqrt_benchmark/numa_node/strong_scaling/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
(+323 files in other folders)
